Repo and code cleanup

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/">
-        <file>icons/cil-gauge.svg</file>
+        <file>../icons/cil-gauge.svg</file>
     </qresource>
 </RCC>
